--- a/gun-deaths-solution.qmd
+++ b/gun-deaths-solution.qmd
@@ -1,17 +1,19 @@
 ---
 title: "Gun deaths"
 date: "`r lubridate::today()`"
-output:
-  html_document:
+format:
+  html:
     toc: true
-    theme: cerulean
-    fig_width: 8
-    fig_height: 6
+    theme: minty
+    fig-height: 6
+    fig-width: 8
+    cache: true
+    echo: false
 ---
 
-```{r setup, include = FALSE}
-knitr::opts_chunk$set(echo = FALSE, cache = TRUE)
-
+```{r setup}
+#| include: false
+#| cache: false
 library(tidyverse)
 library(rcis)
 
@@ -23,13 +25,11 @@ youth <- gun_deaths %>%
 
 We have data about `r nrow(gun_deaths)` individuals killed by guns. Only `r nrow(gun_deaths) - nrow(youth)` are older than 65. The distribution of the remainder is shown below:
 
-```{r youth-dist, echo = FALSE}
+```{r youth-dist}
 youth %>% 
   ggplot(aes(age)) + 
   geom_freqpoly(binwidth = 1)
 ```
-
-The peak of the distribution is around 22 years of age, with a second smaller peak around 50 years of age.
 
 # Gun deaths by race
 
