--- a/gun-deaths.qmd
+++ b/gun-deaths.qmd
@@ -1,10 +1,15 @@
 ---
 title: "Gun deaths"
 date: "`r lubridate::today()`"
-output: html_document
+format:
+  html:
+    toc: true
+    theme: superhero
+    highlight: a11y
 ---
 
-```{r setup, include = FALSE}
+```{r setup}
+#| include: false
 library(tidyverse)
 library(rcis)
 
@@ -16,7 +21,8 @@ youth <- gun_deaths %>%
 
 We have data about `r nrow(gun_deaths)` individuals killed by guns. Only `r nrow(gun_deaths) - nrow(youth)` are older than 65. The distribution of the remainder is shown below:
 
-```{r youth-dist, echo = FALSE}
+```{r youth-dist}
+#| echo: false
 youth %>% 
   ggplot(aes(age)) + 
   geom_freqpoly(binwidth = 1)
